--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Kusto ADE development blog
+title: This blog is under develpment
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Welcome to Azure Data Explorer / Kusto Development blog.
-  Sharing our experience and assets  to help the adoption of this powerful technology.
+  This is AgileSight's Kusto develper blog, which is still under construction. 
+  When finished it will contain posts and reusable assets that should be very useful when developing applications communicating with Kusto clusters.
   Query / Ingestion.
 baseurl: "/kusto-developer-blog" # the subpath of your site, e.g. /blog
 url: "https://agilesight.github.io" # the base hostname & protocol for your site
